--- a/_config.yml
+++ b/_config.yml
@@ -20,12 +20,11 @@ sass:
 # Gems
 plugins:
   - jekyll-feed
-  - jekyll-paginate
-  # - jemoji #Uncomment this to allow emoji in your post
+  - jemoji #Uncomment this to allow emoji in your post
 
 # Permalinks
 permalink:      /:year-:month-:day/:title
-paginate:       5
+
 
 # Related posts settings
 related_posts_section:
@@ -38,3 +37,4 @@ social:
   github: https://github.com/inelaah
   twitter: https://twitter.com
   linkedin: https://ba.linkedin.com/in/inela-avdic-hukic-322354131
+  about: True
